<resources>
    <string name="app_name">Kotlin入门</string>

    <string name="main_page">首页</string>

    <string name="rank_page">排行榜</string>

    <string name="home_page">首页</string>

    <string name="mine_page">我的</string>

    <string name="other_modules_page">功能块</string>

    <string name="camera_page">拍摄</string>

    <string name="gallery_page">图库</string>

    <string name="gallery_list_page">图库列表</string>

    <string name="download_page">任务下载</string>

    <string name="detail_page">详情</string>

    <string name="theme_page">主题切换</string>

    <string name="future_plans_page">未来计划</string>

    <string name="train_records_page">培训记录</string>

    <string name="about_us_page">关于我们</string>

    <string name="operate_database_page">操作数据库</string>

    <string name="query_database_page">查询数据库</string>

    <string name="file_manager_page">文件管理器</string>

    <string name="webview_page">网址</string>
    <!--    拼接名称-->
    <string name="artists_name">作者：</string>


    <!--    功能块名称-->
    <string name="view_data">数据库数据</string>
    <string name="operate_database">操作数据库</string>
    <string name="switch_themes">主题切换</string>
    <string name="about_us">关于我们</string>
    <string name="settings">设置</string>

    <!--    拼接字符串数据-->
    <string name="concat_number">编号:</string>
    <string name="concat_name">名称:</string>
    <string name="concat_gender">性别:</string>
    <string name="concat_address">地址:</string>


    <!--    刷新/加载/没有更多数据标识-->
    <string name="load_loading">加载中...</string>
    <string name="load_no_more">没有更多数据</string>
    <string name="load_error">重试</string>

    <!--    exo媒体信息-->
    <string name="exo_channel_name">媒体文件下载通道</string>
    <string name="exo_channel_des">媒体文件下载描述</string>
</resources>