<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.kotlin.practice.ui.mine.MineViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        CoordinatorLayout+AppBarLayout实现滑动过渡的效果-->

        <!--        CoordinateLayout：本质上是一个增强版的FrameLayout。
        一般作为一个容器来使用，这样可以让它的子控件实现一些交互效果。
        可以通过给子控件指定不同的Behaviors来实现不同的交互效果
        1.折叠标题
        2.内容纱布（滚动一定距离逐渐隐藏）
        3.状态栏纱布
        4.视差滚动
        5.将子View位置固定-->

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/backgroundColor">


            <!--            AppBarLayout是一个垂直分布的LinearLayout，-->
            <!--            其可以定制当某个滚动View的滚动手势发生变化时，-->
            <!--            AppBarLayout内部的子view发生连带动作-->
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--  CollapsingToolbarLayout实质是一个FrameLayout，-->
                <!--  其是作为标题栏外部布局用于控制标题栏效果的。包装你的标题栏控件-->

                <!-- scroll:将此布局和滚动时间关联。这个标识要设置在其他标识之前，没有这个标识则布局不会滚动且其他标识设置无效。-->
                <!-- enterAlways:任何向下滚动操作都会使此布局可见。这个标识通常被称为“快速返回”模式。-->
                <!-- enterAlwaysCollapsed：假设你定义了一个zz小高度（minHeight）同时enterAlways也定义了，那么view将在到达这个zz小高度的时候开始显示，并且从这个时候开始慢慢展开，当滚动到顶部的时候展开完。-->
                <!-- exitUntilCollapsed：当你定义了一个minHeight，此布局将在滚动到达这个zz小高度的时候折叠。-->
                <!-- snap:当一个滚动事件结束，如果视图是部分可见的，那么它将被滚动到收缩或展开。例如，如果视图只有底部25%显示，它将折叠。相反，如果它的底部75%可见，那么它将完全展开-->
                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@{vm.userData.name}"
                    app:collapsedTitleGravity="left"
                    app:expandedTitleGravity="right|bottom"
                    app:collapsedTitleTextAppearance="@style/collapsedTitleStyle"
                    app:expandedTitleTextAppearance="@style/expandedTitleStyle"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                    <!--                    背景颜色设置-->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_180"
                        android:background="@drawable/view_background_style_gradient_blue" />


                    <!--                    显示的头像内容-->

                    <!--                    layout_collapseMode折叠模式，需要结合Toolbar背景颜色观察滚动事件-->
                    <!--                    1.pin：	固定模式。Toolbar固定不动，不受CollapsingToolbarLayout的折叠影响。-->
                    <!--                    2.parallax：视差模式。随着CollapsingToolbarLayout的收缩与展开，Toolbar也跟着收缩与展开。-->
                    <!--                    折叠系数可以通过属性app:layout_collapseParallaxMultiplier配置，该属性为1.0时，折叠效果同pin模式即固定不动；-->
                    <!--                    该属性为0.0时，折叠效果等同于none模式，即也跟着移动相同距离。-->
                    <!--                    3.none：默认值。CollapsingToolbarLayout折叠多少距离，则Toolbar也随着移动多少距离，-->

                    <androidx.appcompat.widget.Toolbar
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_80"
                        android:layout_gravity="center_vertical"
                        app:layout_collapseMode="parallax">

                        <ImageView
                            android:id="@+id/header_view"
                            android:layout_marginRight="@dimen/dp_12"
                            android:layout_gravity="center_vertical"
                            android:layout_width="@dimen/dp_60"
                            android:layout_height="@dimen/dp_60"
                            android:url="@{vm.userData.picurl}"
                            android:imageRadius="@{@dimen/dp_40}"/>

                    </androidx.appcompat.widget.Toolbar>

                </com.google.android.material.appbar.CollapsingToolbarLayout>


                <!--                这里可以添加滑动到顶部后，固定在顶部的布局信息。例如：TabLayout-->


            </com.google.android.material.appbar.AppBarLayout>

            <!--            滚动控件指NestedScrollView，RecyclerView等可滑动控件。这里拖动出来一定会占满屏幕高度-->
            <androidx.core.widget.NestedScrollView
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <!--                    简介文案-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_15"
                        android:background="@drawable/view_background_style_round_10_gradient_yellow"
                        android:padding="@dimen/dp_15"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dp_12"
                        tools:text="应用简介" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_5"
                        android:background="@drawable/view_background_style_round_10_white"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableTop="@drawable/fixed_35size_with_operate_database"
                            android:drawablePadding="@dimen/dp_6"
                            android:gravity="center_horizontal"
                            android:onClickDebouncing="@{vm::operateDatabase}"
                            android:paddingTop="@dimen/dp_10"
                            android:paddingBottom="@dimen/dp_10"
                            android:text="@string/operate_database"
                            android:textColor="?android:textColor"
                            android:textSize="@dimen/dp_14" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableTop="@drawable/fixed_35size_with_view_data"
                            android:drawablePadding="@dimen/dp_6"
                            android:gravity="center_horizontal"
                            android:onClickDebouncing="@{vm::viewData}"
                            android:paddingTop="@dimen/dp_10"
                            android:paddingBottom="@dimen/dp_10"
                            android:text="@string/view_data"
                            android:textColor="?android:textColor"
                            android:textSize="@dimen/dp_14" />

                    </LinearLayout>


                    <!--                contentPadding 内边距设置-->
                    <!--                cardPreventCornerOverlap 防止卡片内容和边角重叠-->
                    <!--                cardUseCompatPadding 兼容不同版本的阴影差异-->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_5"
                        app:cardBackgroundColor="?attr/contentBackgroundColor"
                        app:cardCornerRadius="@dimen/dp_10"
                        app:cardElevation="@dimen/dp_7"
                        app:cardPreventCornerOverlap="true"
                        app:cardUseCompatPadding="true"
                        app:contentPaddingLeft="@dimen/dp_15"
                        app:contentPaddingRight="@dimen/dp_10">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/switch_themes"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableRight="@drawable/fixed_14size_with_gray_arrow"
                                android:onClickDebouncing="@{vm::switchThemes}"
                                android:paddingTop="@dimen/dp_15"
                                android:paddingBottom="@dimen/dp_15"
                                android:text="@string/switch_themes"
                                android:textColor="?android:textColor"
                                android:textSize="@dimen/dp_14" />

                            <View style="@style/line" />

                            <TextView
                                android:id="@+id/about_us"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableRight="@drawable/fixed_14size_with_gray_arrow"
                                android:onClickDebouncing="@{vm::aboutUs}"
                                android:paddingTop="@dimen/dp_15"
                                android:paddingBottom="@dimen/dp_15"
                                android:text="@string/about_us"
                                android:textColor="?android:textColor"
                                android:textSize="@dimen/dp_14" />

                            <View style="@style/line" />

                            <TextView
                                android:id="@+id/settings"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableRight="@drawable/fixed_14size_with_gray_arrow"
                                android:onClickDebouncing="@{vm::settings}"
                                android:paddingTop="@dimen/dp_15"
                                android:paddingBottom="@dimen/dp_15"
                                android:text="@string/file_manager_page"
                                android:textColor="?android:textColor"
                                android:textSize="@dimen/dp_14" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>